cmake_minimum_required(VERSION 3.22)
project(leetcode C)

set(CMAKE_C_STANDARD 99)

add_executable(leetcode main.c)
add_executable(digui 斐波拉契数列递归.c)
add_executable(maopao 冒泡排序.c)
add_executable(KMP KMP.c )
add_executable(kuaisupaixu 快速排序.c)
add_executable(feibo 斐波拉契数列.c )
add_executable(dajiajieshe 打家劫舍算法.c)
add_executable(huiwenchuan 回文串判断.c)
add_executable(zifuchuan  字符串.c)
add_executable(hebinglianggeshuzu 合并两个有序数组.c)
add_executable(erweishuzuchazhao  二维数组查找.c)
add_executable(shunxubiao ArrayList.c)
add_executable(Linklist  Linklist.c)
add_executable(doubleLinkList doubleLinkList.c)
add_executable(arraystack ArrayListstack.c)
add_executable(Linkliststack LinklistStack.c)
add_executable(Queue Queue.c)
add_executable(erchashu twoTree.c)
add_executable(temp temp.c)